--- a/package.json
+++ b/package.json
@@ -12,7 +12,22 @@
     "expo": "~47.0.8",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "0.70.5",
+    "@miblanchard/react-native-slider": "^2.1.0",
+    "@react-native-community/netinfo": "^9.3.6",
+    "@react-navigation/bottom-tabs": "^6.4.0",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.0",
+    "@shopify/react-native-skia": "0.1.157",
+    "@tanstack/react-query": "^4.18.0",
+    "@types/react-native": "^0.70.1",
+    "axios": "^1.2.0",
+    "react-native-gesture-handler": "^2.8.0",
+    "react-native-safe-area-context": "^4.3.3",
+    "react-native-screens": "^3.17.0",
+    "react-native-toast-message": "^2.1.5",
+    "react-native-vector-icons": "^9.2.0",
+    "typescript": "^4.6.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
